# proving-contest-backends

./: LICENSE  README.md  poller.py  watchdog.py
ACL2/: README.md  acl2.profile  config.tmp  grader.py  grader.sh  installacl2.sh  judge  poller_acl2.py  preparejudge.sh  startjudge.sh  stoppoller.sh  tests.py
ACL2/pyth/: README  check.lisp  check.sh  definitions.lisp  solution.lisp
ACL2/system/: ok-or-skipped-doublets.lisp
ACL2/tests/all-ok/: Check-private.lisp  Submission.lisp  solution.lisp  template.lisp
ACL2/tests/first-theorem-and-extra-lemma-skipped/: Submission.lisp  check-private.lisp  solution.lisp  (+2 more)
Coq/: .gitignore  README.md  config.template  judge  opam  poller_coq.py  prepare.sh
Coq/grader/: dune  grader.ml  serapi_utils.ml
Coq/grader/workdir/: Defs.v  Submission.v  checks.sexp
HOL4/: judge  poller.py  run.sh  startserver.sh
Isabelle/: Defs.thy  README  config  config.temp  grader.py  isabelle.profile  judge  poller.py  poller_isa.py  prepareserver.sh  sessions  settings  setupnewnamespace.sh  startserver.sh  startserverscript  stopserver.sh  updatepassword.py  watchdog.py  watchdog.sh
Isabelle/Isabelle2019/: Defs0.thy  OK_Test.thy
Isabelle/Isabelle2020/: OK_Test.thy
Isabelle/Isabelle2021/: OK_Test.thy
Isabelle/Isabelle2022/: OK_Test.thy
Isabelle/Isabelle2023/: OK_Test.thy
Lean/: .gitignore  README.md  config.tmp  grader.py  grader.sh  grader_run.sh  judge  lean.profile  poller.py  poller_lean.py  preparejudge.sh  startjudge.sh  tests.py  tests_run.sh
Lean/variables/: grader_folder  mathlib_revision  mathlib_version  prover_name
(+93 files in other folders)
