(executable
  (name grader)
  (link_flags -linkall)
  (libraries coq-serapi.serlib coq-serapi.serapi_v8_10 coq-serapi.sertop_v8_10
             lwt lwt.unix containers yojson ppx_deriving_yojson.runtime)
  (preprocess (pps ppx_sexp_conv ppx_deriving_yojson)))

(env
 (dev     (flags :standard -rectypes))
 (release (flags :standard -rectypes)))